# CUNYCal

./: .gitignore  CMakeLists.txt  CUNYCal.pro  CUNYClasses.pro  Course.cpp  Course.h  CourseScanner.cpp  CourseScanner.h  ScheduleRegex.cpp  ScheduleRegex.h  TODO.md  automode.cpp  automode.h  automode.ui  let.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualmode.cpp  manualmode.h  manualmode.ui  nextwin.ui  regex.txt  regex2.txt  regex_tester.cpp  res.qrc  test_regex.sh  win1.cpp  win1.h  win1.ui
ExampleSchedules/: bryan.txt  ekaterina.txt  shein_schedule.txt
res/: selectionexample.mov
